[package]
name = "teepee"
version = "0.0.0"
#readme = "README.md"
authors = [ "Chris Morgan <me@chrismorgan.info>" ]
#tags = ["web", "http", "library"]

[dependencies.httpcommon]
path = "src/httpcommon"

[dependencies.httpc]
path = "src/httpc"

[dependencies.httpd]
path = "src/httpd"

#[dependencies.openssl]
#git = "https://github.com/sfackler/rust-openssl.git"
