[package]
name = "httpc"
version = "0.0.0"
authors = [ "Chris Morgan <me@chrismorgan.info>" ]

[lib]
name = "httpc"
path = "lib.rs"

[dependencies.httpcommon]
path = "../httpcommon"

[dependencies.phf]
git = "https://github.com/sfackler/rust-phf.git"

[dependencies.phf_mac]
git = "https://github.com/sfackler/rust-phf.git"
